--- a/8_3_8_encoding.ipynb
+++ b/8_3_8_encoding.ipynb
@@ -56,7 +56,8 @@
     "history = mdl_8_3_8.train(\n",
     "    train_df_x_norm, train_df_y,\n",
     "    epochs=10000,\n",
-    "    debug=True,\n",
+    "    mode='online',\n",
+    "    logging=True,\n",
     "    shuffle=True\n",
     ")\n",
     "hlp.plot_learning_curve(history)"
@@ -68,31 +69,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_num = 4\n",
-    "input_vec = []\n",
-    "\n",
-    "match input_num:\n",
-    "    case 1:\n",
-    "        input_vec = [1, -1, -1, -1, -1, -1, -1, -1]\n",
-    "    case 2:\n",
-    "        input_vec = [-1, 1, -1, -1, -1, -1, -1, -1]\n",
-    "    case 3:\n",
-    "        input_vec = [-1, -1, 1, -1, -1, -1, -1, -1]\n",
-    "    case 4:\n",
-    "        input_vec = [-1, -1, -1, 1, -1, -1, -1, -1]\n",
-    "    case 5:\n",
-    "        input_vec = [-1, -1, -1, -1, 1, -1, -1, -1]\n",
-    "    case 6:\n",
-    "        input_vec = [-1, -1, -1, -1, -1, 1, -1, -1]\n",
-    "    case 7:\n",
-    "        input_vec = [-1, -1, -1, -1, -1, -1, 1, -1]\n",
-    "    case 8:\n",
-    "        input_vec = [-1, -1, -1, -1, -1, -1, -1, 1]\n",
-    "\n",
-    "print(input_vec)\n",
-    "pred = mdl_8_3_8.predict(input_vec)\n",
-    "print(pred)\n",
-    "y_columns[pred.index(max(pred))][-1]"
+    "for i in range(1, 9):\n",
+    "    match i:\n",
+    "        case 1:\n",
+    "            input_vec = [1, -1, -1, -1, -1, -1, -1, -1]\n",
+    "        case 2:\n",
+    "            input_vec = [-1, 1, -1, -1, -1, -1, -1, -1]\n",
+    "        case 3:\n",
+    "            input_vec = [-1, -1, 1, -1, -1, -1, -1, -1]\n",
+    "        case 4:\n",
+    "            input_vec = [-1, -1, -1, 1, -1, -1, -1, -1]\n",
+    "        case 5:\n",
+    "            input_vec = [-1, -1, -1, -1, 1, -1, -1, -1]\n",
+    "        case 6:\n",
+    "            input_vec = [-1, -1, -1, -1, -1, 1, -1, -1]\n",
+    "        case 7:\n",
+    "            input_vec = [-1, -1, -1, -1, -1, -1, 1, -1]\n",
+    "        case 8:\n",
+    "            input_vec = [-1, -1, -1, -1, -1, -1, -1, 1]\n",
+    "    pred = mdl_8_3_8.predict(input_vec)\n",
+    "    print(y_columns[pred.index(max(pred))][-1])"
    ]
   }
  ],
