--- a/halfmoon.ipynb
+++ b/halfmoon.ipynb
@@ -132,13 +132,19 @@
     "    df_train_x_norm,\n",
     "    df_train_y,\n",
     "    epochs=100,\n",
-    "    shuffle=False,\n",
-    "    debug=True,\n",
-    "    min_learning_rate=0.01,\n",
+    "    mode='online',\n",
+    "    logging=True,\n",
     "    adaptive_learning_rate=True\n",
-    ")\n",
-    "\n",
-    "# hlp.plot_learning_curve(history)"
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hlp.plot_learning_curve(history)"
    ]
   },
   {
