--- a/rgb.ipynb
+++ b/rgb.ipynb
@@ -205,7 +205,7 @@
     "    train_df_x_norm,\n",
     "    train_df_y,\n",
     "    epochs=200,\n",
-    "    debug=True,\n",
+    "    logging=True,\n",
     "    shuffle=True,\n",
     "    adaptive_learning_rate=True,\n",
     "    momentum_factor=0.6\n",
