--- a/halfmoon.ipynb
+++ b/halfmoon.ipynb
@@ -160,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validations = mdl_hm.validate_binary(df_val_x_norm, df_val_y)"
+    "validations = mdl_hm.validate_binary(df_val_x_norm, df_val_y, debug=False)"
    ]
   },
   {
@@ -207,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
