started rprop, not working yet

--- a/8_3_8_encoding.ipynb
+++ b/8_3_8_encoding.ipynb
@@ -56,7 +56,8 @@
     "history = mdl_8_3_8.train(\n",
     "    train_df_x_norm, train_df_y,\n",
     "    epochs=10000,\n",
-    "    mode='online',\n",
+    "    mode='offline',\n",
+    "    rprop=True,\n",
     "    logging=True,\n",
     "    shuffle=True\n",
     ")\n",
@@ -94,7 +95,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "f761d2206074d82dd8e41bd143266f9d3dcf5f45b684a45cd98ca9fdc4a46ee0"
+   "hash": "deee277ef8cb4a05cf6441d551c854fa5e547ddedbca2c10e6f5685ea62b6c02"
   },
   "kernelspec": {
    "display_name": "Python 3.10.1 64-bit",
