--- a/rgb.ipynb
+++ b/rgb.ipynb
@@ -204,6 +204,7 @@
     "history = mdl_rgb.train(\n",
     "    train_df_x_norm,\n",
     "    train_df_y,\n",
+    "    mode='online',\n",
     "    epochs=200,\n",
     "    logging=True,\n",
     "    shuffle=True,\n",
@@ -255,7 +256,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "f761d2206074d82dd8e41bd143266f9d3dcf5f45b684a45cd98ca9fdc4a46ee0"
+   "hash": "deee277ef8cb4a05cf6441d551c854fa5e547ddedbca2c10e6f5685ea62b6c02"
   },
   "kernelspec": {
    "display_name": "Python 3.10.1 64-bit",
