--- a/halfmoon.ipynb
+++ b/halfmoon.ipynb
@@ -180,9 +180,7 @@
     "arr_val_x_t = arr_val_x.T\n",
     "\n",
     "preds = []\n",
-    "\n",
-    "for v in validations:\n",
-    "    preds.append(v[0][0])\n",
+    "for v in validations: preds.append(v[0][0])\n",
     "\n",
     "plt.scatter(arr_val_x_t[0], arr_val_x_t[1], c=preds, cmap='bwr', marker='x')"
    ]
@@ -190,7 +188,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "f761d2206074d82dd8e41bd143266f9d3dcf5f45b684a45cd98ca9fdc4a46ee0"
+   "hash": "deee277ef8cb4a05cf6441d551c854fa5e547ddedbca2c10e6f5685ea62b6c02"
   },
   "kernelspec": {
    "display_name": "Python 3.10.1 64-bit",
@@ -207,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.1"
   },
   "orig_nbformat": 4
  },
