weight decay implemented

--- a/8_3_8_encoding.ipynb
+++ b/8_3_8_encoding.ipynb
@@ -57,11 +57,22 @@
     "    train_df_x_norm, train_df_y,\n",
     "    epochs=10000,\n",
     "    mode='offline',\n",
-    "    rprop=True,\n",
+    "    rprop=False,\n",
     "    logging=True,\n",
-    "    shuffle=True\n",
+    "    shuffle=True,\n",
+    "    weight_decay_factor=0.000\n",
     ")\n",
-    "hlp.plot_learning_curve(history)"
+    "# hlp.plot_learning_curve(history)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for l in mdl_8_3_8.layers:\n",
+    "    if l.id > 0: print(l.get_weights())"
    ]
   },
   {
