--- a/halfmoon.ipynb
+++ b/halfmoon.ipynb
@@ -131,10 +131,11 @@
     "history = mdl_hm.train(\n",
     "    df_train_x_norm,\n",
     "    df_train_y,\n",
-    "    epochs=100,\n",
+    "    epochs=50,\n",
     "    mode='online',\n",
     "    logging=True,\n",
-    "    adaptive_learning_rate=True\n",
+    "    adaptive_learning_rate=True,\n",
+    "    weight_decay_factor=0.00005\n",
     ")"
    ]
   },
@@ -144,7 +145,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hlp.plot_learning_curve(history)"
+    "for l in mdl_hm.layers:\n",
+    "    if l.id > 0: print(l.get_weights())"
    ]
   },
   {
