--- a/8_3_8_encoding.ipynb
+++ b/8_3_8_encoding.ipynb
@@ -59,8 +59,7 @@
     "    mode='offline',\n",
     "    rprop=False,\n",
     "    logging=True,\n",
-    "    shuffle=True,\n",
-    "    weight_decay_factor=0.000\n",
+    "    shuffle=True\n",
     ")\n",
     "# hlp.plot_learning_curve(history)"
    ]
@@ -123,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
