--- a/8_3_8_encoding.ipynb
+++ b/8_3_8_encoding.ipynb
@@ -55,9 +55,9 @@
    "source": [
     "history = mdl_8_3_8.train(\n",
     "    train_df_x_norm, train_df_y,\n",
-    "    epochs=10000,\n",
+    "    epochs=1000,\n",
     "    mode='offline',\n",
-    "    rprop=False,\n",
+    "    rprop=True,\n",
     "    logging=True,\n",
     "    shuffle=True\n",
     ")\n",
