attempt at correcting rprop

--- a/test.ipynb
+++ b/test.ipynb
@@ -48,7 +48,6 @@
    "source": [
     "mdl = network.Feed_Forward()\n",
     "mdl.add_layer(2)\n",
-    "mdl.add_layer(5)\n",
     "mdl.add_layer(1, activation_function='sigmoid')"
    ]
   },
@@ -70,11 +69,9 @@
    "source": [
     "history = mdl.train(\n",
     "    train_df_x_norm, train_df_y_norm,\n",
-    "    epochs=25,\n",
-    "    mode='offline',\n",
-    "    rprop=True,\n",
-    "    logging=True,\n",
-    "    shuffle=True\n",
+    "    epochs=100,\n",
+    "    mode='online',\n",
+    "    logging=True\n",
     ")"
    ]
   },
@@ -108,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.1"
   },
   "orig_nbformat": 4
  },
